# pyscf

./: MANIFEST.in  pyproject.toml
.github/workflows/: build-wheels.yml
pyscf/lib/: CMakeLists.txt
